# ai-agent-demo

./: .env.template  .gitignore  README.md  azure_config.py  demo.py  main.py  mcp-config.json  pyproject.toml  settings.py  simple_html_generator.py
.flock/metrics/: cost_202507.json  cpu_202507.json  errors_202507.json  latency_202507.json  memory_202507.json  summary_research_agent_20250706_132226.json  summary_research_agent_20250706_132233.json  summary_research_agent_20250706_132241.json  summary_research_agent_20250706_132341.json  summary_research_agent_20250706_132806.json  summary_research_agent_20250706_132811.json  summary_research_agent_20250706_132817.json  summary_research_agent_20250706_132822.json  summary_research_agent_20250706_132828.json  summary_research_agent_20250706_132833.json  summary_summary_agent_20250706_132229.json  summary_summary_agent_20250706_132237.json  summary_summary_agent_20250706_132243.json  summary_summary_agent_20250706_132341.json  summary_summary_agent_20250706_132808.json  summary_summary_agent_20250706_132813.json  summary_summary_agent_20250706_132819.json  summary_summary_agent_20250706_132824.json  summary_summary_agent_20250706_132829.json  tokens_202507.json  total_cost_202507.json
.github/: copilot-instructions.md
agents/: __init__.py  html_agent.py  image_agent.py  research_agent.py  summary_agent.py
routers/: __init__.py  limit_router.py
